[gd_scene load_steps=4 format=3 uid="uid://b4imn608axt4e"]

[ext_resource type="Texture2D" uid="uid://d15x0lbnd7hw3" path="res://images/assets/tiles/tile_190.png" id="1_3nkdl"]
[ext_resource type="Script" uid="uid://binv7f7dyy4fn" path="res://scripts/ChoppingBoard.gd" id="1_qx60r"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qx60r"]

[node name="ChoppingBoard" type="Area2D"]
script = ExtResource("1_qx60r")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_3nkdl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.5, 0.5)
shape = SubResource("CircleShape2D_qx60r")

[node name="HintLabel" type="Label" parent="."]
visible = false
offset_left = -26.0
offset_top = -24.0
offset_right = 26.0
offset_bottom = -1.0
text = "(E)砧板"

[node name="ItemSprite" type="Sprite2D" parent="."]
position = Vector2(0, -4)

[node name="ChopTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
offset_left = -33.0
offset_top = -42.0
offset_right = 34.0
offset_bottom = -15.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="ChopTimer" to="." method="_on_chop_timer_timeout"]
